# void-builder

./: .gitignore  Cargo.toml  README.md
src/: CMakeLists.txt  error.rs  git_helper.rs  main.cpp  main.rs  settings.rs  test.rs
src/error/: mod.rs
src/git/: CMakeLists.txt  git-helper.cpp  git-helper.hpp  gitHelper.cpp  gitHelper.hpp
src/git_helper/: mod.rs
